--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-appdirs==1.4.4
-beautifulsoup4==4.10.0
-bottle==0.12.19
-certifi==2021.10.8
-charset-normalizer==2.0.12
-colorama==0.4.4
-idna==3.3
-lxml==4.8.0
-mypy==0.942
-mypy-extensions==0.4.3
-pyparsing==3.0.7
-pytz==2021.3
-requests==2.27.1
-soupsieve==2.3.1
-sqlparse==0.4.2
+async-generator==1.10
+attrs==22.1.0
+certifi==2022.9.24
+cffi==1.15.1
+colorama==0.4.6
+exceptiongroup==1.0.4
+h11==0.14.0
+idna==3.4
+iniconfig==1.1.1
+outcome==1.2.0
+packaging==21.3
+pluggy==1.0.0
+pycparser==2.21
+pyparsing==3.0.9
+PySocks==1.7.1
+pytest==7.2.0
+selenium==4.6.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 tomli==2.0.1
-tqdm==4.63.1
-typing_extensions==4.1.1
-urllib3==1.26.9
-webdriver-manager==3.5.4
-webdrivermanager==0.10.0
-whichcraft==0.6.1
-zope.event==4.5.0
-zope.interface==5.4.0
+trio==0.22.0
+trio-websocket==0.9.2
+urllib3==1.26.12
+wsproto==1.2.0
